  * LPR:
  	. added print options for APSFilter handler
	. make use of smb-url conversion functions in Foomatic handler
	. fix problem with rmote lpd queues: force lp=<empty string> in
	  printcap entry

07/02/2002 Michael Goffioul <goffioul@imec.be>
  * job viewer: fix crash when switching the print plugin elsewhere and
    there's some jobs shown + fix refresh problem when switching plugin
  * general: fix small bug when removing a filter in "Filters" page
  * general: discard the toolbar use in the "Instances" page to avoid the
    problem with non-docked vertical toolbars. Use plain QPushButton
    instead, but this has some drawing problems in HighColor style.

11/02/2002 Michael Goffioul <goffioul@imec.be>
  * LPR: added support for LPRngTool+IFHP (not complete yet though)
  * general: various fixes for crashes, inconsistencies, ...

12/02/2002 Michael Goffioul <goffioul@imec.be>
  * kdeprintfax: added %email to possible command tags. The e-mail address
    is retrieved from standard settings in KControl module. The tag can
    also be used in the "Name" field of the options dialog
  * LPR: completion of the LPRngTool handler + implementation of dynamic
    driver directories (to be done: should also be configurable in the
    options dialog)
  * general: Fixed bug -> XML commands couild not be saved
  * CUPS: FontPath directive is now considered as a string list, multiple
    directives are supported and a listview is used in the GUI
  * CUPS: configuration tool now handles gracefully unrecognized options,
    a warning is issued, and they are restored as-is on file saving.

13/02/2002 Michael Goffioul <goffioul@imec.be>
  * CUPS: added support for job-billing and page-label, and put them
    along with the scredule option into a single "Advanced" tab.
  * CUPS: added job billing info to the job viewer
  * CUPS: added job priority selection in the Advanced tab of the print
    dialog
  * general: allow multi selection in the file list of print dialog